--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "em-components",
-  "version": "0.0.0",
-  "private": true,
+  "name": "ethan-components",
+  "version": "1.0.1",
+  "private": false,
   "description": "a collection of components Ethan Merrill uses across his web projects.",
   "keywords": [
     "component"
   ],
   "license": "ISC",
   "author": "Ethan Merrill",
+  "owners": [
+    "ethan_merrill"
+  ],
   "type": "module",
-  "main": "path.resolve(\"src\", 'src/components/index.jsx')",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EthanMerrill/em-components.git"
+  },
+  "main": "./dist/em-components.umd.js",
+  "module": "./dist/em-components.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/em-components.es.js",
+      "require": "./dist/em-components.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -17,18 +31,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "path": "^0.12.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "react": "^19.0.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
